Trying to fix overflow on index in mobile.

--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ a:hover {
   width: 92%;
   height: auto;
   background-color: rgba(0, 0, 0, 0.5); /* Black with 50% opacity */
-  margin: 70px;
+  margin: auto;
   border-radius: 10px; /* Optional: for rounded corners */
   color: white; /* Make text visible against the dark background */
 }
@@ -79,7 +79,7 @@ a:hover {
   width: 92%;
   height: auto;
   background-color: rgba(0, 0, 0, 0.5); /* Black with 50% opacity */
-  margin: 70px;
+  margin: auto;
   border-radius: 10px; /* Optional: for rounded corners */
   color: white; /* Make text visible against the dark background */
 }
